<resources>
    <string name="app_name">IceRock_T1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="readme_empty">Readme отсутствует</string>
    <string name="user_name">User name</string>
    <string name="personal_access_token">Personal access token</string>
    <string name="license">License</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="connection_error">Connection error</string>
    <string name="check_connection">Check your Internet connection</string>
    <string name="empty">Empty</string>
    <string name="no_repositories">No repositories at the moment</string>
    <string name="invalid_values">Invalid values</string>
</resources>